--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "Georg Graf",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "nodemon": "~1.2.1",
-    "less": "~2.1.0"
+    "babel": "^5.8.23",
+    "gulp-babel": "^5.3.0",
+    "gulp-uglify": "~1.0.1",
+    "less": "~2.1.0",
+    "nodemon": "~1.2.1"
   },
   "devDependencies": {
     "gulp": "~3.8.10",
