--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "license": "BSD-2-Clause",
   "dependencies": {
     "babel": "^5.8.23",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^5.3.0",
+    "gulp-less": "^3.0.3",
     "gulp-uglify": "~1.0.1",
-    "less": "~2.1.0",
     "nodemon": "~1.2.1"
   },
   "devDependencies": {
-    "gulp": "~3.8.10",
     "gulp-concat": "~2.4.2"
   }
 }
