--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "gulp-babel": "^5.3.0",
     "gulp-less": "^3.0.3",
     "gulp-uglify": "~1.0.1",
-    "nodemon": "~1.2.1"
+    "nodemon": "^1.8.0"
   },
   "devDependencies": {
     "gulp-concat": "~2.4.2"
